--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "socket.io": "^3.1.0"
   },
   "devDependencies": {
+    "eslint": "^7.19.0",
+    "eslint-config-google": "^0.14.0",
     "nodemon": "^2.0.7"
   }
 }
