--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
   },
   "devDependencies": {
     "eslint": "^7.19.0",
+    "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-google": "^0.14.0",
-    "nodemon": "^2.0.7"
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "nodemon": "^2.0.7",
+    "prettier": "^2.2.1"
   }
 }
