--- a/package.json
+++ b/package.json
@@ -12,8 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "bad-words": "^3.0.4",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "socket.io": "^3.1.0"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.11.15",
+    "socket.io": "^3.1.0",
+    "validator": "^13.5.2"
   },
   "devDependencies": {
     "eslint": "^7.19.0",
