--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15",
     "multer": "^1.4.2",
+    "redis": "^3.1.1",
     "socket.io": "^3.1.0",
     "validator": "^13.5.2"
   },
